# jwt_API

./: Cargo.toml  README.md
front-end/: events.html  login.html  register.html
front-end/css/: style.css
front-end/js/: events.js  login.js  register.js
src/: main.rs
src/db/: database.rs
src/model/: event.rs  mod.rs  user.rs
src/server/: claim.rs  jwt_auth.rs  mod.rs
src/server/events_server/: functions.rs  mod.rs  structs.rs
src/server/user_server/: functions.rs  structs.rs
src/tests/: mod.rs
