[package]
name = "jwt_request"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3"
axum = { version = "0.6", features = ["debug-handler"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.4"
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
